--- a/thesitestyle.css
+++ b/thesitestyle.css
@@ -630,8 +630,8 @@ header, .site-header {
   .project-thumb{width:100% !important; aspect-ratio:4/3; height:auto !important}
   .project-thumb img{width:100% !important; height:100% !important; object-fit:cover}
 
-  header .header-center ul{flex-wrap:wrap;gap:.4rem;justify-content:start}
-  header .header-center a{font-size:.55rem;line-height:2.0rem}
+  header .header-center ul{flex-wrap:wrap;gap:.4rem;justify-content: center}
+  header .header-center a{font-size:.55rem;line-height:5.0rem}
 
   section,#about,#projects,#contact{margin-left:auto;margin-right:auto}
   .about-container{flex-direction:column;align-items:center}
